--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign_up</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <main>
-        <div>
+    <main class="container">
+        <div class="left-column">
             <h1>Sign up</h1>
             <div>
                <a href="#">Privacy policy</a>
@@ -16,6 +17,8 @@
                <a href="#">terms of service</a>
             </div>
         </div>
+
+        <div class="right-column">
         <div>&#x2573</div>
         <form>
             SIGN UP FORM
