Input and button style

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign_up</title>
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/form.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <main class="container">
         <div class="left-column">
             <h1>Sign up</h1>
-            <div>
+            <div class="bottom-texts">
                <a href="#">Privacy policy</a>
                <span>&amp</span>
                <a href="#">terms of service</a>
@@ -20,7 +21,7 @@
         </div>
 
         <div class="right-column">
-        <div>&#x2573</div>
+        <div class="close">&#x2573</div>
         <form>
             <div class="form-row">
                 <label for="">Username</label>
@@ -38,6 +39,11 @@
                 <label for="">Repeat password</label>
                 <input type="password">
             </div>
+            <div class="form-row">
+                <button type="submit">Get started</button>
+                <span>or</span>
+                <a href="#">Sign in</a>
+            </div> </div>
                 
                 
             </div>
