--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
         <form>
             <div class="form-row">
                 <label for="">Username</label>
-                <input type="text">
+                <input type="text" placeholder="Your username" required>
             </div>
             <div class="form-row">
                 <label for="">Email</label>
-                <input type="email">
+                <input type="email" placeholder="Your email" required>
             </div>
             <div class="form-row">
                 <label for="">Password</label>
-                <input type="password">
+                <input type="password" placeholder="Password" required>
             </div>
             <div class="form-row">
                 <label for="">Repeat password</label>
-                <input type="password">
+                <input type="password" placeholder="Password" required>
             </div>
             <div class="form-row">
                 <button type="submit">Get started</button>
