--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <div class="background"></div>
     <main class="container">
         <div class="left-column">
             <h1>Sign up</h1>
